--- a/3_SecondAnalysis.ipynb
+++ b/3_SecondAnalysis.ipynb
@@ -585,57 +585,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TRAIN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainImputeData['Country'] = trainImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],mapData,'Country'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainImputeData['Province'] = trainImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainImputeData['Nearest_Province'] = trainImputeData.apply(lambda row: nearest_province_by_boundary(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainImputeData[['Industrial_Region','Distance']] = trainImputeData.apply(lambda row: nearest_industrial_by_boundary(row['latitude'],row['longitude'],industialRegion,'NAME_2'), axis=1, result_type='expand')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "trainImputeData['Country'] = trainImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],mapData,'Country'), axis=1)\n",
+    "trainImputeData['Province'] = trainImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)\n",
+    "trainImputeData['Nearest_Province'] = trainImputeData.apply(lambda row: nearest_province_by_boundary(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)\n",
+    "trainImputeData[['Industrial_Region','Distance']] = trainImputeData.apply(lambda row: nearest_industrial_by_boundary(row['latitude'],row['longitude'],industialRegion,'NAME_2'), axis=1, result_type='expand')\n",
     "trainImputeData['Province'] = np.where(trainImputeData['Province']=='Unknown',trainImputeData['Nearest_Province'],trainImputeData['Province'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainImputeData.to_csv('D:/Kaggle Datasets/TrainDataTransformed.csv',index=False)"
    ]
   },
   {
@@ -649,12 +615,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#VALID"
+    "VALID"
    ]
   },
   {
@@ -663,61 +627,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validImputeData['Country'] = validImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],mapData,'Country'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validImputeData['Province'] = validImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validImputeData['Nearest_Province'] = validImputeData.apply(lambda row: nearest_province_by_boundary(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validImputeData[['Industrial_Region','Distance']] = validImputeData.apply(lambda row: nearest_industrial_by_boundary(row['latitude'],row['longitude'],industialRegion,'NAME_2'), axis=1, result_type='expand')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "validImputeData['Country'] = validImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],mapData,'Country'), axis=1)\n",
+    "validImputeData['Province'] = validImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)\n",
+    "validImputeData['Nearest_Province'] = validImputeData.apply(lambda row: nearest_province_by_boundary(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)\n",
+    "validImputeData[['Industrial_Region','Distance']] = validImputeData.apply(lambda row: nearest_industrial_by_boundary(row['latitude'],row['longitude'],industialRegion,'NAME_2'), axis=1, result_type='expand')\n",
     "validImputeData['Province'] = np.where(validImputeData['Province']=='Unknown',validImputeData['Nearest_Province'],validImputeData['Province'])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "validImputeData.to_csv('D:/Kaggle Datasets/validDataTransformed.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TEST"
+    "TEST"
    ]
   },
   {
@@ -726,7 +647,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testImputeData['Country'] = testImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],mapData,'Country'), axis=1)"
+    "testImputeData['Country'] = testImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],mapData,'Country'), axis=1)\n",
+    "testImputeData['Province'] = testImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)\n",
+    "testImputeData['Nearest_Province'] = testImputeData.apply(lambda row: nearest_province_by_boundary(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)\n",
+    "testImputeData[['Industrial_Region','Distance']] = testImputeData.apply(lambda row: nearest_industrial_by_boundary(row['latitude'],row['longitude'],industialRegion,'NAME_2'), axis=1, result_type='expand')\n",
+    "testImputeData['Province'] = np.where(testImputeData['Province']=='Unknown',testImputeData['Nearest_Province'],testImputeData['Province'])"
    ]
   },
   {
@@ -735,43 +660,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testImputeData['Province'] = testImputeData.apply(lambda row: find_location(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testImputeData['Nearest_Province'] = testImputeData.apply(lambda row: nearest_province_by_boundary(row['latitude'],row['longitude'],rwanda_map,'Province_Name'), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testImputeData[['Industrial_Region','Distance']] = testImputeData.apply(lambda row: nearest_industrial_by_boundary(row['latitude'],row['longitude'],industialRegion,'NAME_2'), axis=1, result_type='expand')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testImputeData['Province'] = np.where(testImputeData['Province']=='Unknown',testImputeData['Nearest_Province'],testImputeData['Province'])\n",
+    "trainImputeData.to_csv('D:/Kaggle Datasets/TrainDataTransformed.csv',index=False)\n",
+    "validImputeData.to_csv('D:/Kaggle Datasets/validDataTransformed.csv',index=False)\n",
     "testImputeData.to_csv('D:/Kaggle Datasets/testDataTransformed.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
